--- a/source/css/options.css
+++ b/source/css/options.css
@@ -22,37 +22,71 @@
 	Source code: https://github.com/thewebdev/opera-blink-extension-icr.git 
 	Email: thewebdev@myopera.com */
 	
-/* RESET */
+
 body {
 	font-family:"Helvetica Neue", "Free Sans", Arial, Helvetica, sans-serif;
     font-size:0.7em;
-    line-height:1.5;	
+    line-height:1.5;
+	min-width: 700px;
+	max-width: 900px;
+	margin: 2px auto;	
+
 }
+
 label {
 	font-weight: bold;
 }
+
 h1 {
-	margin: 1px;
 	text-align:center;
 	font-size:1.5em;
 	text-transform: uppercase;
 }
+
+section h1 {
+	text-align:left;
+	font-size:1.5em;
+	text-transform: none;
+}
+
 h2 {
 	margin: 1px;
 	text-align:left;
 	font-size:1.2em;
 }
+
 ol {
 	list-style-type: none;
 	text-align:center;
 }
-li {	
+
+ol li {	
 	list-style-type: none;
 	margin: 3px;
 	color: #10600D;
 	text-align:left;
 }
-a:link, a:visited, a:active {
+
+ul {
+	margin: 15px 0px;
+	padding: 0px;
+}
+
+ul li {	
+	list-style-type: none;
+	margin: 10px 0px;
+	color: #10600D;
+	text-align:right;
+	text-transform: uppercase;	
+}
+
+#links a:link, #links a:visited, #links a:active {
+	color: #0644D4;
+	text-decoration:none;
+	font-weight: bold;	
+}
+
+section a:link, section a:visited, section a:active {
 	margin-right: 4px;
 	padding: 0px 3px;
 	color: #D40707;
@@ -63,62 +97,78 @@ a:link, a:visited, a:active {
 	background: #FFE7E7;
 }
 
-a:hover {
+section a:hover {
 	font-weight: bold;
 }
-#options {
-	width: 450px;
+
+#links a:hover {
+	text-decoration:underline;
+	font-weight: bold;
 }
+
+#contain {
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+	-webkit-box-pack: center;
+	-webkit-box-align: center;
+}
+
+header {
+	margin-top: 15px;
+}
+
+#settings{
+	display: -webkit-box;
+	-webkit-box-orient: horizontal;
+}
+
+#links {
+	-webkit-box-flex: 1;
+	padding: 15px 10px;
+}
+
+#page {
+	border: thin dotted #ADADAD;
+	border-radius: 15px;
+	background-color: #F7F7F7;
+}
+
 #msg {
 	display: none;
-	margin: 1px;
-	padding: 1px;
-	width: 450px;
+	margin: 5px;
+	padding: 4px;
 	color: #FFF;
+	font-size:1.2em;	
 	text-align: center;
 	font-weight: bold;
 	background: #BC0808;
-	border-radius: 4px;
+	border-radius: 3px;
+}
+
+#pairs {
+	margin: 1px;
+	padding: 6px 5px;
 }
 #input label {
 	padding:2px;
 } 
+
 #input select {
 	margin:2px 2px 4px 2px;
 } 
+
 #swap {
 	cursor: pointer;	
 }
-.noline {
-	margin: 1px;
-	padding: 6px 5px;
-}
+
 .optval {
 	margin: 1px;
 	padding: 6px 5px;
-	border-top: thin dotted #CCC;
+	border-top: thin dotted #ADADAD;
 }
+
 .submit {
 	margin: 1px;
 	padding: 5px;
 	text-align: center;
-}
-#nav { 
-	margin: 2px;
-	padding: 2px;
-	text-align: center;
-}
-#nav li {
-	display: inline;
-	list-style-type: none;
-	padding: 0 3px 0 0;
-}
-#nav a:link, #nav a:visited, #nav a:active {
-	color: #0644D4;
-	font-weight: bold;
-	border: none;
-	background: #fff;
-}
-#nav a:hover {
-	text-decoration:underline;
 }
